# bearlyheard

./: .gitignore  README.md  plan.md  pyproject.toml  run.py
bearlyheard/: __init__.py  main.py
bearlyheard/audio/: __init__.py  app_recorder.py  applications.py  capture.py  devices.py  mixer.py  player.py  wasapi_capture.py
bearlyheard/gui/: dialogs.py  main_window.py  themes.py  workers.py
bearlyheard/ml/: __init__.py  diarizer.py  summarizer.py  transcriber.py
bearlyheard/utils/: __init__.py  config.py  file_manager.py  logger.py
src/: main.py
src/gui/: __init__.py
